# golang-minimize

./: cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  Makefile  README.md  go.mod  main.go
{{cookiecutter.project_slug}}/cmd/{{cookiecutter.project_slug}}/: main.go  root.go  version.go
{{cookiecutter.project_slug}}/configs/: config.go
{{cookiecutter.project_slug}}/log/: log.go
