[tool.poetry]
name = "golang-template"
version = "0.1.0"
description = ""
authors = ["Minato <82735346+minato-ellie@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "golang_template"}]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cookies = "^0.6.1"
nox = "^2022.11.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
